--- a/PedalParadise2/PedalParadise/PedalParadise.csproj
+++ b/PedalParadise2/PedalParadise/PedalParadise.csproj
@@ -6,10 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 	<ItemGroup>
+		<Folder Include="wwwroot\" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0" />
-		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.0.0" />		
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />		
 	</ItemGroup>
 
 </Project>
